Refactor FindCommandParser for multiple predicates